--- a/nut.yml
+++ b/nut.yml
@@ -12,3 +12,7 @@ macros:
     usage: start vscode to edit this project
     actions:
     - su - vscode -c "code -w /home/vscode/golang-vscode"
+  bash:
+    usage: start bash
+    actions:
+    - su - vscode
